# pythonProject

./: pyproject.toml
src/: functions.py
tests/: conftest.py  test_functions.py
