[tool.poetry]
name = "pythonproject"
version = "0.1.0"
description = ""
authors = ["s.leontev <neonyan15@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pytest = "^7.3.1"
pytest-cov = "^4.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
